--- a/src/scss/_firstView.scss
+++ b/src/scss/_firstView.scss
@@ -1,4 +1,4 @@
-main {
+#firstView {
     height: 831px;
     position: relative;
     border: 1px solid transparent;
@@ -12,7 +12,7 @@ main {
             left: -483px;
             top: -132px;
         }
-        .main_content {
+        .firstView_content {
             margin-left: 788px;
             margin-top: 210px;
             .buttons {
