--- a/src/scss/nav/_userAction.scss
+++ b/src/scss/nav/_userAction.scss
@@ -1,6 +1,7 @@
 .nav_user {
     width: 180px;
     height: 36px;
+    position: relative;
     &:hover li a {
         border: none;
     }
@@ -18,10 +19,19 @@
             height: 36px;
             text-align: center;
             transition: $main-transition;
-            @include main-hover($color: #fad648);
+            @include main-hover($color: $yellow);
+        }
+        &:nth-last-child(3) {
+            position: absolute;
+            padding: 9px 20px;
+            left: -85%;
+            pointer-events: none;
         }
     }
     .nav_userBorder {
-        @include settingBorder($color: #fad648);
+        @include settingBorder($yellow);
+    }
+    .nav_userColor {
+        color: #000;
     }
 }
