--- a/src/scss/settings/_color.scss
+++ b/src/scss/settings/_color.scss
@@ -2,6 +2,7 @@ $color1: #F0F1F1;
 $back-grey: #F0F1F1;
 $color2: #5E5322;
 $color3: #FAD648;
+$yellow: #FAD648;
 $color4: #737373;
 $color5: #3C3C3C;
 $main-color: #3C3C3C;
