adding second step

--- a/src/scss/formStepSection/_formSteps.scss
+++ b/src/scss/formStepSection/_formSteps.scss
@@ -1,5 +1,6 @@
 .formSteps {
     height: 883px;
+    border: 1px solid transparent;
     &:before {
         content: "";
         position: absolute;
