--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
 @import "./formStepSection/formStepsSection";
 @import "./formStepSection/formSteps";
 @import "./formStepSection/importantInfo";
+@import "./formStepSection/customSelect";
 body {
   font-family: $font-base;
   color: $main-color;
