--- a/src/scss/formStepSection/_formStepsSection.scss
+++ b/src/scss/formStepSection/_formStepsSection.scss
@@ -1,6 +1,16 @@
 #formStepsSection {
     height: 1062px;
     position: relative;
+    &:before {
+        content: "";
+        position: absolute;
+        background-image: url("../../assets/images/Background-Form.webp");
+        left: 0;
+        right: 0;
+        top: 179px;
+        height: 883px;
+        z-index: -1;
+    }
     .important {
         display: block;
         margin-top: 48px;
@@ -8,26 +18,5 @@
         font-weight: 600;
         line-height: 46px;
         color: #000;
-    }
-    .btn {
-        width: 180px;
-        height: 79px;
-        border: $main-border;
-        cursor: pointer;
-        outline: none;
-        background-color: transparent;
-        font-weight: 300;
-        font-size: 24px;
-        line-height: 32px;
-        color: #000;
-        position: absolute;
-        bottom: 50px;
-        margin-right: 50px;
-        &:nth-last-child(2) + .btn{
-            left: 410px;
-        }
-        &:hover {
-            opacity: 0.5;
-        }
     }
 }
