--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,8 @@
 @import "./formStepSection/formSteps";
 @import "./formStepSection/importantInfo";
 @import "./formStepSection/customSelect";
+@import "./formStepSection/btn";
+@import "./formStepSection/stepThree";
 body {
   font-family: $font-base;
   color: $main-color;
