--- a/src/scss/formStepSection/_customSelect.scss
+++ b/src/scss/formStepSection/_customSelect.scss
@@ -3,7 +3,7 @@
     font-weight: 300;
     font-size: 24px;
     line-height: 33px;
-    width: 528px;
+    display: inline-block;
     position: relative;
     .dd-desc {
         margin-right: 26px;
@@ -39,7 +39,7 @@
             padding: 0 35px;
             transition: $main-transition;
             cursor: pointer;
-            &:hover{
+            &:hover {
                 opacity: 0.5;
             }
         }
