--- a/src/scss/formStepSection/_stepThree.scss
+++ b/src/scss/formStepSection/_stepThree.scss
@@ -14,46 +14,33 @@
                 }
             }
         }
-        .important {
-            font-size: 24px;
-            line-height: 32px;
-            margin-bottom: 20px;
-        }
-        .choose_wrapper {
-            width: 675px;
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 0;
-            li {
-                margin: 0;
-                &:nth-last-child(-n + 2) {
-                    margin-top: 25px;
-                }
-                label {
-                    display: inline-block;
-                    padding: 11px 26px;
-                    border: $main-border;
-                    margin: 0;
-                    margin-right: 12px;
-                    left: -13px;
-                    &::before {
-                        content: none;
-                    }
-                }
-                input:checked + label {
-                    background-color: #fad648;
+        .customBox_wrapper {
+            &:nth-child(3) {
+                input {
+                    display: block;
+                    width: 570px;
+                    opacity: 1;
                 }
             }
-        }
-        .orgName{
-            input{
-                display: block;
-                width: 570px;
-                height: 40px;
-                border: $main-border;
-                background-color: transparent;
-                padding: 0 10px;
-                @include labelInputFormStep
+            .customBoxList_wrapper {
+                width: 675px;
+                display: flex;
+                flex-wrap: wrap;
+                margin-top: 0;
+                li {
+                    margin: 0;
+                    &:nth-last-child(-n + 2) {
+                        margin-top: 25px;
+                    }
+                    label {
+                        padding: 11px 26px;
+                        border: $main-border;
+                        left: -13px;
+                    }
+                    input:checked + label {
+                        background-color: #fad648;
+                    }
+                }
             }
         }
     }
