--- a/src/scss/formStepSection/_customBox.scss
+++ b/src/scss/formStepSection/_customBox.scss
@@ -2,7 +2,7 @@
     margin-top: 40px;
     .oneBox {
         margin-top: 42px;
-        input {
+        input, textarea {
             opacity: 0;
         }
         label {
