--- a/src/scss/formStepSection/_stepFour.scss
+++ b/src/scss/formStepSection/_stepFour.scss
@@ -15,9 +15,17 @@
                     justify-content: space-between;
                     align-items: center;
                     margin-top: 20px;
-                    input {
+                    input,
+                    textarea {
                         opacity: 1;
                         width: 256px;
+                    }
+                    textarea {
+                        resize: none;
+                        height: 120px;
+                    }
+                    label {
+                        width: 115px;
                     }
                 }
             }
