--- a/src/scss/formStepSection/_stepThreeFourSum.scss
+++ b/src/scss/formStepSection/_stepThreeFourSum.scss
@@ -1,11 +1,13 @@
 #formStepsSection {
-    .stepThreeFour {
+    .stepThreeFour,
+    .sum {
         .important {
             font-size: 24px;
             line-height: 32px;
             margin-bottom: 20px;
         }
-        input {
+        input,
+        textarea {
             height: 40px;
             border: $main-border;
             background-color: transparent;
