--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,8 +33,9 @@
 @import "./formStepSection/customSelect";
 @import "./formStepSection/btn";
 @import "./formStepSection/stepThree";
-@import './formStepSection/stepThreeFour';
+@import './formStepSection/stepThreeFourSum';
 @import './formStepSection/stepFour';
+@import './formStepSection/sum';
 body {
   font-family: $font-base;
   color: $main-color;
