--- a/src/scss/formStepSection/_formStepsSection.scss
+++ b/src/scss/formStepSection/_formStepsSection.scss
@@ -16,6 +16,7 @@
         content: "";
         position: absolute;
         background-image: url("../../assets/images/Background-Form.webp");
+        background-position: right;
         left: 0;
         right: 0;
         top: 179px;
