--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,14 +28,15 @@
 @import "userDonateView";
 @import "./formStepSection/formStepsSection";
 @import "./formStepSection/formSteps";
-@import './formStepSection/customBox';
+@import "./formStepSection/customBox";
 @import "./formStepSection/importantInfo";
 @import "./formStepSection/customSelect";
 @import "./formStepSection/btn";
 @import "./formStepSection/stepThree";
-@import './formStepSection/stepThreeFourSum';
-@import './formStepSection/stepFour';
-@import './formStepSection/sum';
+@import "./formStepSection/stepThreeFourSum";
+@import "./formStepSection/stepFour";
+@import "./formStepSection/sum";
+@import "./rwd";
 body {
   font-family: $font-base;
   color: $main-color;
