--- a/src/scss/nav/_userAction.scss
+++ b/src/scss/nav/_userAction.scss
@@ -1,7 +1,6 @@
 .nav_user {
   width: 180px;
   height: 36px;
-  position: relative;
 
   &:hover li a {
     border: none;
@@ -28,7 +27,7 @@
     &:nth-last-child(3) {
       position: absolute;
       padding: 9px 20px;
-      left: -85%;
+      right: 190px;
       pointer-events: none;
     }
   }
